--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^5.2.3",
     "d3": "^7.8.2",
+    "html-react-parser": "^3.0.15",
     "jquery": "^3.6.4",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
